// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot testing > Default 1`] = `
<button
  aria-label="Default"
  class="ds:cursor-pointer ds:group ds:flex ds:flex-col ds:justify-center ds:items-center ds:gap-2"
  type="button"
>
  <div
    aria-hidden="true"
    class="ds:size-[40px] ds:bg-bg-gray-2 ds:text-black ds:group-hover:text-accent ds:rounded-full ds:flex ds:items-center ds:justify-center ds:select-none"
  >
    target
  </div>
  <span
    class="ds:text-black ds:text-button-md ds:group-hover:text-accent ds:group-hover:underline"
  >
    Default
  </span>
</button>
`;

exports[`Snapshot testing > Disabled, non-selected 1`] = `
<button
  aria-label="Disabled, non-selected"
  class="ds:cursor-pointer ds:group ds:flex ds:flex-col ds:justify-center ds:items-center ds:gap-2"
  type="button"
>
  <div
    aria-hidden="true"
    class="ds:size-[40px] ds:bg-bg-gray-2 ds:text-black ds:group-hover:text-accent ds:rounded-full ds:flex ds:items-center ds:justify-center ds:select-none"
  >
    target
  </div>
  <span
    class="ds:text-black ds:text-button-md ds:group-hover:text-accent ds:group-hover:underline"
  >
    Disabled, non-selected
  </span>
</button>
`;

exports[`Snapshot testing > Disabled, selected 1`] = `
<button
  aria-label="Disabled, non-selected"
  class="ds:cursor-pointer ds:group ds:flex ds:flex-col ds:justify-center ds:items-center ds:gap-2"
  type="button"
>
  <div
    aria-hidden="true"
    class="ds:size-[40px] ds:bg-accent ds:text-white ds:rounded-full ds:flex ds:items-center ds:justify-center ds:select-none"
  >
    target
  </div>
  <span
    class="ds:text-accent ds:text-button-md ds:group-hover:text-accent ds:group-hover:underline"
  >
    Disabled, non-selected
  </span>
</button>
`;

exports[`Snapshot testing > Disabled, selected 2`] = `
<button
  aria-label="Disabled, non-selected"
  class="ds:cursor-pointer ds:group ds:flex ds:flex-col ds:justify-center ds:items-center ds:gap-2"
  type="button"
>
  <div
    aria-hidden="true"
    class="ds:size-[40px] ds:bg-accent ds:text-white ds:rounded-full ds:flex ds:items-center ds:justify-center ds:select-none"
  >
    target
  </div>
  <span
    class="ds:text-accent ds:text-button-md ds:group-hover:text-accent ds:group-hover:underline"
  >
    Disabled, non-selected
  </span>
</button>
`;

exports[`Snapshot testing > selected 1`] = `
<button
  aria-label="Selected"
  class="ds:cursor-pointer ds:group ds:flex ds:flex-col ds:justify-center ds:items-center ds:gap-2"
  type="button"
>
  <div
    aria-hidden="true"
    class="ds:size-[40px] ds:bg-accent ds:text-white ds:rounded-full ds:flex ds:items-center ds:justify-center ds:select-none"
  >
    target
  </div>
  <span
    class="ds:text-accent ds:text-button-md ds:group-hover:text-accent ds:group-hover:underline"
  >
    Selected
  </span>
</button>
`;
